--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,5 +1,5 @@
 body {
-	color: $cf-white;
+	color: $cf-richBlack;
 	font-family: Arial, Helvetica, sans-serif;
 	font-size: clamp(1.4rem, 4.5vw, 1.6rem);
 	font-weight: 400;
