add font styles to index.html

--- a/css/styles.css
+++ b/css/styles.css
@@ -57,6 +57,7 @@ html {
 }
 
 body {
+  color: #001c29ff;
   background-color: #cececeff;
   /* This makes dealing with the sizes of elements much easier, 
   	and generally eliminates a number of pitfalls you can stumble on
@@ -94,6 +95,10 @@ body {
 
 .website-section-bottom-margin {
   margin-bottom: 5rem;
+}
+
+.footer {
+  background-color: #001c29ff;
 }
 
 /*# sourceMappingURL=styles.css.map */
