--- a/sass/base/_base.scss
+++ b/sass/base/_base.scss
@@ -39,6 +39,8 @@ html {
 }
 
 body {
+	color: $cp-richBlack;
+	
 	background-color: $cp-silver;
 	/* This makes dealing with the sizes of elements much easier, 
 		and generally eliminates a number of pitfalls you can stumble on
