--- a/css/styles.css
+++ b/css/styles.css
@@ -57,7 +57,6 @@ html {
 }
 
 body {
-  color: #001c29ff;
   background-color: #cececeff;
   /* This makes dealing with the sizes of elements much easier, 
   	and generally eliminates a number of pitfalls you can stumble on
@@ -83,10 +82,14 @@ a, button {
 
 body {
   color: #001c29ff;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: "Lato", sans-serif;
   font-size: clamp(1.4rem, 4.5vw, 1.6rem);
   font-weight: 400;
-  line-height: 1.5;
+  line-height: 1.6;
+}
+
+.paragraph--footerDeveloper {
+  color: #cececeff;
 }
 
 .text-align-center {
