--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -1,7 +1,22 @@
+	// H1 Heading
+	// font-family: "Montserrat", sans-serif; font-weight: 900;
+	
+	// H2, H3 & H4 Headings
+	// font-family: "Days One", sans-serif;  font-weight: 400;
+	
+	// Body Text
+	// font-family: "Lato", sans-serif; font-weight: 400 & 700;
+	
 body {
 	color: $cf-richBlack;
-	font-family: Arial, Helvetica, sans-serif;
+	font-family: "Lato", sans-serif;
 	font-size: clamp(1.4rem, 4.5vw, 1.6rem);
 	font-weight: 400;
-	line-height: 1.5;
+	line-height: 1.6;
+}
+
+.paragraph {
+	&--footerDeveloper {
+		color: $cf-silver;
+	}
 }
