--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -1,3 +1,6 @@
 .footer {
       background-color: $cp-richBlack;
+      &__footerDeveloperParagraph {
+            background-color: aqua;
+      }
 }
