--- a/sass/abstracts/_mixins.scss
+++ b/sass/abstracts/_mixins.scss
@@ -46,3 +46,19 @@ ORDER: base + typography > general layout + grid > page layout > components
 		}
 	}
 }
+// flex row mixin
+@mixin displayFlexRow {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	gap: 2rem;
+}
+// flex column mixin
+@mixin displayFlexColumn {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	gap: 2rem;
+}
