--- a/css/styles.css
+++ b/css/styles.css
@@ -90,6 +90,12 @@ body {
 
 .paragraph--footerDeveloper {
   color: #cececeff;
+  font-size: clamp(1.2rem, 4.3vw, 1.4rem);
+  line-height: 1.2;
+}
+.paragraph--footerDeveloperName {
+  color: #0075abff;
+  font-weight: 700;
 }
 
 .text-align-center {
@@ -104,7 +110,12 @@ body {
   background-color: #001c29ff;
 }
 .footer__footerDeveloperParagraph {
-  background-color: aqua;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  gap: 0.25rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
