add styles to contactDetailIcons

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -104,6 +104,10 @@ $p-large: 5rem;
 $p-medium: 2.5rem;
 $p-small: 1rem;
 
+//iconSize
+$contactDetailIconSizeWidth: 3.25rem;
+$contactDetailIconSizeHeight: 3.25rem;
+
 
 
 
