--- a/css/styles.css
+++ b/css/styles.css
@@ -121,6 +121,23 @@ body {
   margin-bottom: 5rem;
 }
 
+.contact__contactDetailItem {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  gap: 0.75rem;
+}
+.contact__contactDetailIcon {
+  width: 3.25rem;
+  height: 3.25rem;
+}
+.contact__contactDetailIcon--address {
+  width: calc(3.25rem - .5rem);
+  height: calc(3.25rem - .5rem);
+}
+
 .footer {
   display: flex;
   flex-direction: column;
