--- a/sass/main.scss
+++ b/sass/main.scss
@@ -10,6 +10,7 @@
 @import "components/logo";
 @import "components/socialmedia";
 
+@import "layout/address";
 @import "layout/footer";
 @import "layout/header";
 @import "layout/main";
