style contact section and fix contact links

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -59,6 +59,7 @@ $cp-richBlack:#001c29ff;
 $cp-neonBlue: #0062ffff;
 $cp-honoluluBlue: #0075abff;
 $cp-erin: #00ff33ff;
+$cp-shamrockGreen: #07964c;
 $cp-emerald: #20cb72ff;
 $cp-redCmyk: #dd0000ff;
 $cp-silver: #cececeff;
@@ -68,7 +69,9 @@ $cp-lightGrey: #b9b9b9;
 // font colors
 $cf-richBlack:#001c29ff;
 $cf-silver: #cececeff;
+$cf-neonBlue: #0062ffff;
 $cf-honoluluBlue: #0075abff;
+$cf-shamrockGreen: #07964c;
 $cf-emerald: #20cb72ff;
 $cf-grey: #898989;
 $cf-lightGrey: #b9b9b9;
