--- a/css/styles.css
+++ b/css/styles.css
@@ -84,15 +84,15 @@ body {
   color: #001c29ff;
   font-family: "Lato", sans-serif;
   font-size: clamp(1.4rem, 4.5vw, 1.6rem);
-  font-weight: 400;
+  font-weight: 500;
   line-height: 1.6;
   text-align: center;
 }
 
 .headingH3 {
-  color: #0075abff;
+  color: #07964c;
   font-family: "Lato", sans-serif;
-  font-weight: 700;
+  font-weight: 900;
   line-height: 1.2;
   letter-spacing: 3px;
 }
@@ -100,8 +100,11 @@ body {
 .paragraph {
   line-height: 1.2;
 }
-.paragraph--address {
-  color: #cececeff;
+.paragraph--contactArticle {
+  color: #0062ffff;
+  font-weight: 700;
+  text-decoration: underline;
+  text-underline-offset: 2px;
 }
 .paragraph--footerDeveloper {
   color: #cececeff;
@@ -114,6 +117,10 @@ body {
   text-underline-offset: 3px;
 }
 
+.contact {
+  font-style: normal;
+}
+
 .text-align-center {
   text-align: center;
 }
@@ -122,6 +129,30 @@ body {
   margin-bottom: 5rem;
 }
 
+.contact {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  width: min(100%, 45rem);
+  margin: 0 auto 5rem;
+}
+.contact__sectionContentWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.contact__contactArticle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  gap: 0.5rem;
+}
 .contact__contactDetailItem {
   display: flex;
   flex-direction: row;
