--- a/css/styles.css
+++ b/css/styles.css
@@ -136,6 +136,7 @@ body {
   align-items: center;
   gap: 2rem;
   width: min(100%, 45rem);
+  padding: 0 1rem;
   margin: 0 auto 5rem;
 }
 .contact__sectionContentWrapper {
@@ -218,6 +219,37 @@ body {
   align-items: center;
   gap: 2rem;
   gap: 0.25rem;
+}
+
+.socialMedia {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  width: min(100%, 45rem);
+  padding: 0 1rem;
+  margin: 0 auto 5rem;
+}
+.socialMedia__sectionContentWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.socialMedia__socialMediaArticle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  gap: 0.5rem;
+}
+.socialMedia__socialMediaDetailIcon {
+  width: 3.25rem;
+  height: 3.25rem;
+  margin-top: 0.5rem;
 }
 
 /*# sourceMappingURL=styles.css.map */
