--- a/sass/layout/_address.scss
+++ b/sass/layout/_address.scss
@@ -1,6 +1,7 @@
 .contact {
       @include displayFlexColumn;
       width: min(100%, 45rem);
+      padding: 0 1rem;
       margin: 0 auto 5rem;
       &__sectionContentWrapper {
             @include displayFlexColumn;
