--- a/css/styles.css
+++ b/css/styles.css
@@ -153,6 +153,7 @@ body {
   align-items: center;
   gap: 2rem;
   gap: 0.5rem;
+  width: 100%;
 }
 .contact__contactDetailItem {
   display: flex;
@@ -169,6 +170,17 @@ body {
 .contact__contactDetailIcon--address {
   width: calc(3.25rem - .5rem);
   height: calc(3.25rem - .5rem);
+}
+.contact__contactGoogleMapsIframeContainer {
+  border: 2px solid #0062ffff;
+  width: min(100%, 45rem);
+  padding: 0.25rem;
+  margin-top: 0.75rem;
+}
+.contact__contactGoogleMapsIframe {
+  display: block;
+  width: 100%;
+  height: auto;
 }
 
 .footer {
