add structure, content and styles to process section

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -91,6 +91,7 @@ $fs-btn-small: 1.6rem;
 $br-large: .25rem;
 $br-medium: .5rem;
 $br-small: 1rem;
+$br-cirle: 10000px;
 
 // box-shadow
 $bs-dark: 0 0 12px 3px rgba(22, 22, 22, .35);
