--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,15 @@ body {
   text-align: center;
 }
 
+.headingH2 {
+  color: #001c29ff;
+  font-family: "Days One", sans-serif;
+  font-size: clamp(2.2rem, 6.5vw, 2.4rem);
+  font-weight: 400;
+  line-height: 1.2;
+  letter-spacing: 3px;
+}
+
 .headingH3 {
   color: #001c29ff;
   font-family: "Lato", sans-serif;
@@ -101,6 +110,12 @@ body {
   color: #0062ffff;
   font-size: clamp(1.5rem, 5vw, 1.7rem);
   text-align: left;
+  line-height: 1.1;
+}
+.headingH3--processListItemHeading {
+  color: #0062ffff;
+  font-size: clamp(1.5rem, 5vw, 1.7rem);
+  text-align: center;
   line-height: 1.1;
 }
 
@@ -404,6 +419,83 @@ body {
   padding: 2rem;
 }
 .services__serviceArticleImage {
+  display: block;
+  border: 2px solid #0062ffff;
+  width: 100%;
+  height: auto;
+  padding: 0.25rem;
+}
+
+.process {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  width: min(100%, 45rem);
+  padding: 0 1rem;
+  margin: 0 auto 5rem;
+}
+.process__sectionContentWrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  gap: 2rem;
+}
+.process__processList {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.process__processListItem {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  gap: 0.5rem;
+  background-color: #b9b9b9;
+  border: 2px solid #0062ffff;
+  box-shadow: 0 0 12px 3px rgba(22, 22, 22, 0.35);
+  width: 100%;
+  padding: 2rem;
+}
+.process__servicesArticle {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  gap: 1.5rem;
+}
+.process__servicesArticle--serviceArea {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  gap: 2rem;
+}
+.process__servicesArticleAreasListContainer {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  align-items: flex-start;
+  gap: 0.5rem;
+  background-color: #b9b9b9;
+  border: 2px solid #0062ffff;
+  border-radius: none;
+  box-shadow: 0 0 12px 3px rgba(22, 22, 22, 0.35);
+  width: 100%;
+  padding: 2rem;
+}
+.process__serviceArticleImage {
   display: block;
   border: 2px solid #0062ffff;
   width: 100%;
