--- a/css/styles.css
+++ b/css/styles.css
@@ -89,6 +89,25 @@ body {
   text-align: center;
 }
 
+.heroHeading {
+  color: #001c29ff;
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(1.8rem, 5vw, 2.4rem);
+  font-weight: 900;
+  text-transform: uppercase;
+  text-align: left;
+  letter-spacing: 1px;
+  line-height: 1.2;
+}
+.heroHeading__heroHeadingByline {
+  font-family: "Lato", sans-serif;
+  font-size: clamp(1.4rem, 5.5vw, 1.8rem);
+  font-weight: 700;
+  text-align: center;
+  text-transform: none;
+  line-height: 1.4;
+}
+
 .headingH2 {
   color: #001c29ff;
   font-family: "Days One", sans-serif;
@@ -159,6 +178,12 @@ body {
   font-size: clamp(1.2rem, 4.3vw, 1.4rem);
 }
 
+.btn--primary {
+  color: #cececeff;
+  font-family: "Lato", sans-serif;
+  font-size: clamp(1.6rem, 5vw, 1.8rem);
+  font-weight: 700;
+}
 .btn--secondary {
   color: #cececeff;
   font-family: "Lato", sans-serif;
@@ -206,7 +231,7 @@ body {
   transform: translateY(-1px);
 }
 .btn--primary {
-  background-color: #0062ffff;
+  background-color: #07964c;
 }
 .btn--secondary {
   background-color: #0062ff;
@@ -318,13 +343,39 @@ body {
 }
 
 .hero {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  width: min(100%, 45rem);
   min-height: 95vh;
   padding: 1rem;
+  margin: 0 auto;
 }
-.hero__heroLogoImg {
+.hero__heroHeading {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+
+.heroHeadingPrimary {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+  gap: 1rem;
+}
+.heroHeadingPrimary__heroHeadingPrimaryLogoImg {
   display: block;
-  width: min(100%, 45rem);
+  width: clamp(4.5rem, 22vw, 6rem);
   height: auto;
+}
+.heroHeadingPrimary__heroHeadingPrimaryText {
+  width: clamp(19rem, 50vw, 23rem);
 }
 
 .socialMedia {
