--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -72,6 +72,7 @@ $cf-silver: #cececeff;
 $cf-neonBlue: #0062ffff;
 $cf-honoluluBlue: #0075abff;
 $cf-shamrockGreen: #07964c;
+$cf-dark-shamrockGreen: #016732;
 $cf-emerald: #20cb72ff;
 $cf-grey: #898989;
 $cf-lightGrey: #b9b9b9;
