change styling of hero section

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -59,6 +59,7 @@ $cp-richBlack:#001c29ff;
 $cp-neonBlue: #0062ffff;
 $cp-honoluluBlue: #0075abff;
 $cp-erin: #00ff33ff;
+$cp-dark-shamrockGreen: #016732;
 $cp-shamrockGreen: #07964c;
 $cp-emerald: #20cb72ff;
 $cp-redCmyk: #dd0000ff;
