--- a/css/styles.css
+++ b/css/styles.css
@@ -95,17 +95,17 @@ body {
   font-size: clamp(1.8rem, 5vw, 2.4rem);
   font-weight: 900;
   text-transform: uppercase;
-  text-align: left;
+  text-align: center;
   letter-spacing: 1px;
   line-height: 1.2;
 }
 .heroHeading__heroHeadingByline {
   font-family: "Lato", sans-serif;
-  font-size: clamp(1.4rem, 5.5vw, 1.8rem);
+  font-size: clamp(1.4rem, 4.5vw, 1.6rem);
   font-weight: 700;
   text-align: center;
   text-transform: none;
-  line-height: 1.4;
+  line-height: 1.2;
 }
 
 .headingH2 {
@@ -237,7 +237,7 @@ body {
   transform: translateY(-1px);
 }
 .btn--primary {
-  background-color: #07964c;
+  background-color: #016732;
 }
 .btn--secondary {
   background-color: #0062ff;
@@ -372,6 +372,7 @@ body {
   justify-content: center;
   align-items: center;
   gap: 2rem;
+  gap: 0.75rem;
 }
 .hero__heroCredentialsContainer {
   display: flex;
@@ -411,7 +412,7 @@ body {
 
 .heroHeadingPrimary {
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: center;
   align-items: center;
   gap: 2rem;
@@ -419,7 +420,7 @@ body {
 }
 .heroHeadingPrimary__heroHeadingPrimaryLogoImg {
   display: block;
-  width: clamp(4.5rem, 22vw, 6rem);
+  width: clamp(18rem, 22vw, 24rem);
   height: auto;
 }
 .heroHeadingPrimary__heroHeadingPrimaryText {
