--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -21,16 +21,16 @@ body {
 	font-size: clamp(1.8rem, 5vw, 2.4rem);
 	font-weight: 900;
 	text-transform: uppercase;
-	text-align: left;
+	text-align: center;
 	letter-spacing: 1px;
 	line-height: 1.2;
       &__heroHeadingByline {
 		font-family: "Lato", sans-serif; 
-		font-size: clamp(1.4rem, 5.5vw, 1.8rem);
+		font-size: clamp(1.4rem, 4.5vw, 1.6rem);
 		font-weight: 700;
 		text-align: center;
 		text-transform: none;
-		line-height: 1.4;
+		line-height: 1.2;
 	}
 }
 .headingH2 {
