--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -20,7 +20,7 @@
           transform: translateY(-1px);
       }
       &--primary {
-          background-color: $cp-dark-shamrockGreen;
+          background-color: $cp-dark-blue;
       }
       &--secondary {
           background-color: rgba($cp-neonBlue, 1);
