--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -56,6 +56,7 @@
 
 // primary colors
 $cp-richBlack:#001c29ff;
+$cp-dark-blue: rgb(0, 29, 73);
 $cp-neonBlue: #0062ffff;
 $cp-honoluluBlue: #0075abff;
 $cp-erin: #00ff33ff;
@@ -69,9 +70,11 @@ $cp-lightGrey: #b9b9b9;
 
 // font colors
 $cf-richBlack:#001c29ff;
+$cf-dark-blue: rgb(0, 29, 73);
 $cf-silver: #cececeff;
 $cf-neonBlue: #0062ffff;
 $cf-honoluluBlue: #0075abff;
+$cf-erin: #00ff33ff;
 $cf-shamrockGreen: #07964c;
 $cf-dark-shamrockGreen: #016732;
 $cf-emerald: #20cb72ff;
