--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -37,7 +37,7 @@ body {
 	color: $cf-richBlack;
 	font-family: "Days One", sans-serif;  
 	font-size: clamp(2.2rem, 6.5vw, 2.4rem);
-	font-weight: 400;
+	font-weight: 900;
 	line-height: 1.2;
 	letter-spacing: 3px;
 }
@@ -54,6 +54,12 @@ body {
 		text-decoration: underline;
 		text-underline-offset: 3px;
 	}
+	&--aboutOwner {
+		color: $cf-dark-blue;
+		letter-spacing: 2px;
+		text-decoration: underline;
+		text-underline-offset: 3px;
+	}
 	&--servicesListItemHeading {
 		color: $cf-neonBlue;
 		font-size: clamp(1.5rem, 5vw, 1.7rem);
@@ -67,6 +73,7 @@ body {
 		line-height: 1.1;
 	}
 }
+
 .headingH4 {
 	color: $cf-richBlack;
 	font-family: "Lato", sans-serif; 
@@ -74,6 +81,11 @@ body {
 	font-weight: 900;
 	line-height: 1.2;
 	letter-spacing: 3px;
+	&--aboutOwner {
+		font-size: clamp(1.4rem, 6vw, 1.6rem);
+		font-weight: 700;
+		letter-spacing: 1px;
+	}
 	&--serviceAreasHeading {
 		color: $cf-neonBlue;
 		font-size: clamp(1.5rem, 5vw, 1.7rem);
@@ -108,7 +120,7 @@ body {
 }
 .btn {
 	&--primary {
-		color: $cf-silver;
+		color: $cf-erin;
 		font-family: "Lato", sans-serif; 
 		font-size: clamp(1.6rem, 5vw, 1.8rem);
 		font-weight: 700;
