change content and styles of footer section

--- a/sass/abstracts/_variables.scss
+++ b/sass/abstracts/_variables.scss
@@ -70,7 +70,7 @@ $cp-lightGrey: #b9b9b9;
 
 // font colors
 $cf-richBlack:#001c29ff;
-$cf-dark-blue: rgb(0, 29, 73);
+$cf-dark-blue: #001d49;
 $cf-silver: #cececeff;
 $cf-neonBlue: #0062ffff;
 $cf-honoluluBlue: #0075abff;
