--- a/css/styles.css
+++ b/css/styles.css
@@ -112,13 +112,13 @@ body {
   color: #001c29ff;
   font-family: "Days One", sans-serif;
   font-size: clamp(2.2rem, 6.5vw, 2.4rem);
-  font-weight: 900;
+  font-weight: 400;
   line-height: 1.2;
   letter-spacing: 3px;
 }
 
 .headingH3 {
-  color: #001c29ff;
+  color: #001d49;
   font-family: "Lato", sans-serif;
   font-size: clamp(1.8rem, 6vw, 2rem);
   font-weight: 900;
@@ -148,6 +148,15 @@ body {
   font-size: clamp(1.5rem, 5vw, 1.7rem);
   text-align: center;
   line-height: 1.1;
+}
+.headingH3--footerFigure {
+  font-family: "Montserrat", sans-serif;
+  font-size: clamp(1.8rem, 5vw, 2.4rem);
+  font-weight: 900;
+  text-transform: uppercase;
+  text-align: center;
+  letter-spacing: 2px;
+  line-height: 1.2;
 }
 
 .headingH4 {
@@ -191,7 +200,8 @@ body {
   text-underline-offset: 2px;
 }
 .paragraph--footerDeveloper {
-  color: #cececeff;
+  color: #001d49;
+  font-weight: 500;
   font-size: clamp(1.2rem, 4.3vw, 1.4rem);
 }
 
@@ -209,13 +219,29 @@ body {
 }
 
 .navlink--footerNavlink {
-  color: #20cb72ff;
+  color: #001d49;
+  font-weight: 700;
+  text-decoration: underline;
+  text-underline-offset: 3px;
+}
+.navlink--footerNavlinkDev {
+  color: #cececeff;
+  font-weight: 700;
   text-decoration: underline;
   text-underline-offset: 3px;
 }
 
 .contact {
   font-style: normal;
+}
+
+.footer {
+  color: #001d49;
+}
+.footer__footerAddressContainer {
+  color: #001d49;
+  font-style: normal;
+  line-height: 1.2;
 }
 
 .text-align-center {
@@ -316,7 +342,22 @@ body {
   align-items: center;
   gap: 2rem;
   gap: 2rem;
-  background-color: #001c29ff;
+  background-color: #07964c;
+  padding: 5rem 1rem 1rem;
+}
+.footer__figure {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 2rem;
+}
+.footer__logoImg {
+  display: flex;
+  order: 2px solid #00ff33ff;
+  border-radius: 10000px;
+  width: 20rem;
+  height: auto;
 }
 .footer__footerNavigationContainer {
   display: flex;
@@ -333,6 +374,9 @@ body {
   align-items: center;
   gap: 2rem;
   gap: 1rem;
+}
+.footer__footerAddressContainer {
+  gap: 0.25rem;
 }
 .footer__footerSocialMediaList {
   display: flex;
