--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -142,8 +142,12 @@ body {
 		font-weight: 700;
 	}
 }
+.navLink--hamburgerMenuNavlink {
+	color: $cf-dark-blue;
+	font-weight: 700;
+}
 .navlink {
-	&--footerNavlink {
+	&--footerNavlink, &__hamburgerMenuNavlink {
 		color: $cf-dark-blue;
 		font-weight: 700;
 		text-decoration: underline;
@@ -154,6 +158,16 @@ body {
 		font-weight: 700;
 		text-decoration: underline;
 		text-underline-offset: 3px;
+	}
+}
+.logo {
+	&__text {
+		color: $cf-silver;
+		font-family: "Lato", sans-serif; 
+		font-size: clamp(1.4rem, 4.5vw, 1.6rem);
+		font-weight: 700;
+		text-align: left;
+		line-height: 1.1;
 	}
 }
 .contact {
