--- a/css/styles.css
+++ b/css/styles.css
@@ -142,10 +142,12 @@ body {
 }
 
 .headingH2 {
-  color: #001c29ff;
+  color: #001d49;
   font-family: "Days One", sans-serif;
-  font-size: clamp(2.2rem, 6.5vw, 2.4rem);
-  font-weight: 400;
+  font-size: clamp(2rem, 6.5vw, 2.4rem);
+  font-weight: 900;
+  text-shadow: 1px 1px 1px #0075ab;
+  text-transform: uppercase;
   line-height: 1.2;
   letter-spacing: 3px;
 }
