--- a/css/styles.css
+++ b/css/styles.css
@@ -241,13 +241,14 @@ body {
 }
 
 .btn--primary {
-  color: #00ff33ff;
+  color: #cececeff;
   font-family: "Lato", sans-serif;
   font-size: clamp(1.6rem, 5vw, 1.8rem);
-  font-weight: 700;
+  font-weight: 500;
+  letter-spacing: 1px;
 }
 .btn--secondary {
-  color: #cececeff;
+  color: #001d49;
   font-family: "Lato", sans-serif;
   font-size: clamp(1.6rem, 5vw, 1.8rem);
   font-weight: 700;
@@ -326,8 +327,8 @@ body {
   background-color: #001d49;
 }
 .btn--secondary {
-  background-color: #0062ff;
-  border: 1px solid #898989;
+  background-color: transparent;
+  border: 2px solid #001d49;
 }
 
 .logo {
