--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -84,7 +84,6 @@ body {
 		line-height: 1.2;
 	}
 }
-
 .headingH4 {
 	color: $cf-richBlack;
 	font-family: "Lato", sans-serif; 
@@ -132,13 +131,14 @@ body {
 }
 .btn {
 	&--primary {
-		color: $cf-erin;
+		color: $cf-silver;
 		font-family: "Lato", sans-serif; 
 		font-size: clamp(1.6rem, 5vw, 1.8rem);
-		font-weight: 700;
+		font-weight: 500;
+		letter-spacing: 1px;
 	}
 	&--secondary {
-		color: $cf-silver;
+		color: $cf-dark-blue;
 		font-family: "Lato", sans-serif; 
 		font-size: clamp(1.6rem, 5vw, 1.8rem);
 		font-weight: 700;
