add text-shadow to heroHeadingPrimary

--- a/sass/base/_typography.scss
+++ b/sass/base/_typography.scss
@@ -16,12 +16,14 @@ body {
 	text-align: center;
 }
 .heroHeading {
-	color: $cp-richBlack;
+	color: $cp-dark-blue;
 	font-family: "Montserrat", sans-serif; 
-	font-size: clamp(1.8rem, 5vw, 2.4rem);
+	font-size: clamp(2rem, 5vw, 2.8rem);
 	font-weight: 900;
-	text-transform: uppercase;
 	text-align: center;
+	text-shadow: 1px 1px 1px rgba($cp-shamrockGreen, 1);
+	text-transform: uppercase;
+	
 	letter-spacing: 1px;
 	line-height: 1.2;
       &__heroHeadingByline {
@@ -29,6 +31,7 @@ body {
 		font-size: clamp(1.4rem, 4.5vw, 1.6rem);
 		font-weight: 700;
 		text-align: center;
+		text-shadow: none;
 		text-transform: none;
 		line-height: 1.2;
 	}
